{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 32,
  "lineage": "6d9a4936-39c6-53a4-3e64-1dfe4022327c",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e360a05cd0ea2078",
            "association_id": "eipassoc-0e0451793dc5e26dc",
            "domain": "vpc",
            "id": "eipalloc-0e360a05cd0ea2078",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06d39cef954701660",
            "private_dns": "ip-172-101-1-147.ec2.internal",
            "private_ip": "172.101.1.147",
            "public_dns": "ec2-3-224-208-194.compute-1.amazonaws.com",
            "public_ip": "3.224.208.194",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jtang-terraform-eip"
            },
            "tags_all": {
              "Name": "jtang-terraform-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450183644535:internet-gateway/igw-0bc8cad78db90e6ac",
            "id": "igw-0bc8cad78db90e6ac",
            "owner_id": "450183644535",
            "tags": {
              "Name": "jtang-terraform-internet-gateway"
            },
            "tags_all": {
              "Name": "jtang-terraform-internet-gateway"
            },
            "vpc_id": "vpc-0f3f46eea1b5fdf77"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e360a05cd0ea2078",
            "connectivity_type": "public",
            "id": "nat-07ba7de87d68e0225",
            "network_interface_id": "eni-06d39cef954701660",
            "private_ip": "172.101.1.147",
            "public_ip": "3.224.208.194",
            "subnet_id": "subnet-0c15219fa605b2e66",
            "tags": {
              "Name": "jtang-terraform-nat-gateway"
            },
            "tags_all": {
              "Name": "jtang-terraform-nat-gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.publicsubnet1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privatert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450183644535:route-table/rtb-06683b3447cafbe61",
            "id": "rtb-06683b3447cafbe61",
            "owner_id": "450183644535",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07ba7de87d68e0225",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jtang-terraform-private-routetable"
            },
            "tags_all": {
              "Name": "jtang-terraform-private-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3f46eea1b5fdf77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.publicsubnet1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450183644535:route-table/rtb-00e74c51873532644",
            "id": "rtb-00e74c51873532644",
            "owner_id": "450183644535",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc8cad78db90e6ac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jtang-terraform-public-routetable"
            },
            "tags_all": {
              "Name": "jtang-terraform-public-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3f46eea1b5fdf77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtprivate1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c83897dd965e17f1",
            "route_table_id": "rtb-06683b3447cafbe61",
            "subnet_id": "subnet-088c52560932480b3"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.privatert",
            "module.vpc.aws_subnet.privatesubnet1",
            "module.vpc.aws_subnet.publicsubnet1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtprivate2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0280f29105685e6b6",
            "route_table_id": "rtb-06683b3447cafbe61",
            "subnet_id": "subnet-0ea288a81a1b52e42"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.privatert",
            "module.vpc.aws_subnet.privatesubnet2",
            "module.vpc.aws_subnet.publicsubnet1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtprivate3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0329447211ce40cfb",
            "route_table_id": "rtb-06683b3447cafbe61",
            "subnet_id": "subnet-09bf415d211d85737"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.privatert",
            "module.vpc.aws_subnet.privatesubnet3",
            "module.vpc.aws_subnet.publicsubnet1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtpublic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0034983e76903a312",
            "route_table_id": "rtb-00e74c51873532644",
            "subnet_id": "subnet-0c15219fa605b2e66"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.publicrt",
            "module.vpc.aws_subnet.publicsubnet1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtpublic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0830347e1c6b8e644",
            "route_table_id": "rtb-00e74c51873532644",
            "subnet_id": "subnet-04809c01b5ccc0608"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.publicrt",
            "module.vpc.aws_subnet.publicsubnet2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtpublic3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4f82bd0078eb83b",
            "route_table_id": "rtb-00e74c51873532644",
            "subnet_id": "subnet-002ffafe2f0e260d9"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.publicrt",
            "module.vpc.aws_subnet.publicsubnet3",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450183644535:subnet/subnet-088c52560932480b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.101.51.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088c52560932480b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450183644535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jtang-terraform-privatesubnet1"
            },
            "tags_all": {
              "Name": "jtang-terraform-privatesubnet1"
            },
            "vpc_id": "vpc-0f3f46eea1b5fdf77"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450183644535:subnet/subnet-0ea288a81a1b52e42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.101.52.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea288a81a1b52e42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450183644535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jtang-terraform-privatesubnet2"
            },
            "tags_all": {
              "Name": "jtang-terraform-privatesubnet2"
            },
            "vpc_id": "vpc-0f3f46eea1b5fdf77"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450183644535:subnet/subnet-09bf415d211d85737",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.101.53.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bf415d211d85737",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450183644535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jtang-terraform-privatesubnet3"
            },
            "tags_all": {
              "Name": "jtang-terraform-privatesubnet3"
            },
            "vpc_id": "vpc-0f3f46eea1b5fdf77"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450183644535:subnet/subnet-0c15219fa605b2e66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.101.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c15219fa605b2e66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450183644535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jtang-terraform-publicsubnet1"
            },
            "tags_all": {
              "Name": "jtang-terraform-publicsubnet1"
            },
            "vpc_id": "vpc-0f3f46eea1b5fdf77"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450183644535:subnet/subnet-04809c01b5ccc0608",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.101.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04809c01b5ccc0608",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450183644535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jtang-terraform-publicsubnet2"
            },
            "tags_all": {
              "Name": "jtang-terraform-publicsubnet2"
            },
            "vpc_id": "vpc-0f3f46eea1b5fdf77"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450183644535:subnet/subnet-002ffafe2f0e260d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.101.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002ffafe2f0e260d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450183644535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jtang-terraform-publicsubnet3"
            },
            "tags_all": {
              "Name": "jtang-terraform-publicsubnet3"
            },
            "vpc_id": "vpc-0f3f46eea1b5fdf77"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450183644535:vpc/vpc-0f3f46eea1b5fdf77",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.101.0.0/16",
            "default_network_acl_id": "acl-06e7024a0212540d2",
            "default_route_table_id": "rtb-09dcad4e3fb334316",
            "default_security_group_id": "sg-08b95645d350d5a20",
            "dhcp_options_id": "dopt-0cfe42d52ad0bd6aa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f3f46eea1b5fdf77",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09dcad4e3fb334316",
            "owner_id": "450183644535",
            "tags": {
              "Name": "jtang-terraform-vpc"
            },
            "tags_all": {
              "Name": "jtang-terraform-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}